Converting an Existing Data Stream to a System DataStream is Broken